[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pathfinder"
version = "1.0.0"
description = ""
readme = ""
requires-python = "==3.12.8"
license = {text = "UNKNOWN"}
authors = []
dependencies = [
    "auditwheel>=6.4.1",
    "cibuildwheel>=3.0.1",
    "patchelf>=0.17.2.2",
    "pybind11>=3.0.0",
    "setuptools>=80.9.0",
    "twine>=6.1.0",
    "wheel>=0.45.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]

[tool.setuptools]
include-package-data = true