[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
wheel.install-dir = "."

[project]
name = "pathfinder"
version = "1.0.0"
description = "Pathfinder is a wrapper over the famous Octomap and OMPL libraries."
readme = "README.md"
requires-python = "==3.12.*"
license = {text = "UNKNOWN"}
authors = []
dependencies = [
    "cibuildwheel>=3.1.1",
]
